# gen_csv_test_files

./: README.md  main.py  pyproject.toml
test_files/: test_basic.csv  test_decimals_eu.csv  test_duplicate_headers.csv  test_empty_lines.csv  test_invalid_headers.csv  test_long_strings.csv  test_many_columns.csv  test_missing.csv  test_mixed_case.csv  test_no_headers.csv  test_numbers.csv  test_pipe.csv  test_quotes.csv  test_single_column.csv  test_single_row.csv  test_tab.txt
