[project]
name = "gen-csv-test-files"
version = "0.1.0"
description = "Generate CSV test files for validating data import/export pipelines."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Asadbek Karimov", email = "contact@asadk.dev" }
]
keywords = ["csv", "testing", "data", "import", "export", "fixtures"]
dependencies = []
